- -> Removed
! -> Note

11-Apr-2011 Mark Dexter
 # [#25602] Sort in Article Category List broken
 # [#23364] Installation of tar.gz packages fails in xampp under Windows
 # [#25614] *en-GB.files_joomla.sys.ini not loading
 # [#25541] Apply (Save and present in Editor again) does not checkout row
 # [#23878] Remove remaining ereg* functions - Obscolete in PHP 5.3
 # [#25581] RTL in Atomic

10-Apr-2011 Jean-Marie Simonet
 $ Adding lib_joomla.ini into site language folder and localise.php in admin language folder to prevent confusion for TTs.
 $ Changing en-GB.xmls version for 1.6.2
 
09-Apr-2011 Jean-Marie Simonet
 #$ Updating pl-PL installation language

08-Apr-2011 Jean-Marie Simonet
 # [#25585] *Unused Jtoolbarhelper title in Language Manager Content Languages
 # [#24321] Hiding "Add New Shortcuts" removed Groups and Levels in admin menu. Thanks Christophe.
 # [#25257] media manager folder names hidden when long. Thanks Bill and Andrea.

07-Apr-2011
 # [#24016] Native support for IIS Rewrite
 # [#25247] Fix a number of incorrect comment in components
 # [#25563] Category Blog - More Article links don't have limitation
 # [#25497] *Notices with module Articles category
 # [#25576] Gmail authentication fails (Verify Peer variable mistyped)
 # [#25550] com_contact vCard link not using JRoute::_() which causes download issues with System - Language Filter plugin enabled and SEF

07-Apr-2011 Jean-Marie Simonet
 # [#25569] the package strings are not translated when installing or managing. Thanks Christophe

06-Apr-2011 Jean-Marie Simonet
 # [#25551] #24285 change breaks module cache functionality, needs to be reverted. Thanks Klas.
 # [#25572] *ROOT parent category wrongly displays in featured and blog layout
 # [#25571] admin templates does not add a border on fielset when using tabs. Thanks Christophe.

05-Apr-2011 Mark Dexter
 # [#25540] JModelForm enables 'com_checkin' for 'core.manage' - should be 'core.admin'