@@ -34,6 +34,7 @@ $ -> Language fix or change
  # [#25541] Apply (Save and present in Editor again) does not checkout row
  # [#23878] Remove remaining ereg* functions - Obscolete in PHP 5.3
  # [#25581] RTL in Atomic
+ # [#25603] *Email Cloak Plugin outputs preformatted code in email "to" field
 
 10-Apr-2011 Jean-Marie Simonet
  $ Adding lib_joomla.ini into site language folder and localise.php in admin language folder to prevent confusion for TTs.
